--- a/composer.json
+++ b/composer.json
@@ -3,7 +3,8 @@
     "description": "Uzpost integration package for phpers",
     "type": "package",
     "require": {
-        "guzzlehttp/guzzle": "^7.9"
+        "guzzlehttp/guzzle": "^7.9",
+      "ext-json": "*"
     },
     "autoload": {
         "psr-4": {
@@ -15,5 +16,13 @@
             "name": "encoderuz",
             "email": "abduqodirxojiyev@gmail.com"
         }
-    ]
+    ],
+    "require-dev": {
+        "pestphp/pest": "^3.7"
+    },
+    "config": {
+        "allow-plugins": {
+            "pestphp/pest-plugin": true
+        }
+    }
 }
